<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bacground"
    tools:context=".menu.MenuActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:foregroundGravity="center"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/search"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:inputType="textPersonName"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:shadowColor="@color/color_search_text"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/color_search_text" />

        <ImageView
            android:id="@+id/imageViewUser"
            android:layout_width="150dp"
            android:scaleType="centerCrop"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            app:srcCompat="@drawable/default_image" />

    </LinearLayout>
    c
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_turn_on_tab"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/buttonLiveGames"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/color_turn_on_tab"
            android:text="@string/menu_live_games"
            android:textColor="@color/text_color_tabs" />

        <Button
            android:id="@+id/buttonLiveChannels"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/bacground"
            android:text="@string/menu_live_channels"
            android:textColor="@color/text_color_tabs" />

        <Button
            android:id="@+id/buttonReplays"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/bacground"
            android:text="@string/menu_replays"
            android:textColor="@color/text_color_tabs" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/bacground"
        android:scrollbars="vertical"
        android:focusable="auto"
        android:descendantFocusability="beforeDescendants"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddToGrid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:context="example.javatpoint.com.recyclerviewlist.MainActivity">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/buttonAddToGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:background="@drawable/button"
        android:fontFamily="@font/fonts"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/menu_add_grid"
        android:textColor="@color/text_color_button"
        android:textSize="13sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>