<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bacground"
    android:orientation="vertical"
    tools:context=".translation.TranslationActivity3">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPlayGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/translation_game"
            android:textColor="@color/color_text"
            android:textSize="24sp"
            android:visibility="gone"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="49dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFull"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:gravity="center|right"
                android:text="@string/translation_full_screen"
                android:textColor="@color/text_color_tabs"
                android:focusable="true"
                android:visibility="visible"
                tools:layout_editor_absoluteX="487dp"
                tools:layout_editor_absoluteY="70dp" />

            <TextView
                android:id="@+id/textViewExit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:foregroundGravity="right"
                android:focusable="true"
                android:gravity="center|right"
                android:text="@string/translation_exit"
                android:textColor="@color/text_color_tabs"
                tools:layout_editor_absoluteX="487dp"
                tools:layout_editor_absoluteY="70dp" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/mainL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:focusable="false"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/sub1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer
                    android:id="@+id/video_player_item_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:visibility="visible">

                <com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer
                    android:id="@+id/video_player_item_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sub2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            tools:visibility="visible">

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer
                    android:id="@+id/video_player_item_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer
                    android:id="@+id/video_player_item_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0.75"
        android:background="@color/bacground"
        android:focusable="auto"
        android:descendantFocusability="beforeDescendants"
        android:scrollbars="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddToGrid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:context="example.javatpoint.com.recyclerviewlist.MainActivity">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>